refactor: in progress for resttemplate, tests as well